src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Share_goals_for_the_next_36_mo__c</fullName>
        <label>Share goals for the next 36 mo</label>
        <picklist>
            <picklistValues>
                <fullName>Working on advanced cert./diplomat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase profit center income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hire/train associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace, hire, retrain key staff person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching/lecturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sell my practice and retire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition practice to a family member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Shoulders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shoulders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_W9_Received__c</fullName>
        <label>Signed W9 Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sleep_Apnea_Snoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sleep Apnea / Snoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sleep_Pain_Areas__c</fullName>
        <label>Sleep - Pain Areas</label>
        <picklist>
            <picklistValues>
                <fullName>Lower/Upper Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hip/Sciatica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoulders</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sleep_Problems_Sleep_Stealers__c</fullName>
        <label>❶ Sleep Problems/Sleep Stealers:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sleep_Walking_Night_Terrors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sleep Walking / Night Terrors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Website &quot;Contact Us&quot; form field</description>
        <inlineHelpText>Website &quot;Contact Us&quot; form field</inlineHelpText>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchKey__c</fullName>
        <formula>FirstName &amp; LastName &amp; Email &amp; Company</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchLevel__c</fullName>
        <label>Match Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchScore__c</fullName>
        <label>MatchScore</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_ID_Number__c</fullName>
        <label>Tax ID Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Attributes_Symptoms_Conditions__c</fullName>
        <label>Tertiary Attributes/Symptoms/Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hip Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoulder Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Baby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibromyalgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arthritis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scoliosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Reflux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restless Leg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Mover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>AST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transfer_Count__c</fullName>
        <formula>if( not(isnull(Transfer_SHOW_Date__c)),1,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfer Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_SHOW_Date__c</fullName>
        <label>Transfer/SHOW Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer_SHOW_SP__c</fullName>
        <label>Transfer/SHOW SP</label>
        <picklist>
            <picklistValues>
                <fullName>Al</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transferred__c</fullName>
        <formula>if( Transfer_Count__c =1,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transferred ?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Try_the_Bed__c</fullName>
        <description>4. I&apos;d like to try the bed so I can recommend it with full confidence.</description>
        <inlineHelpText>Auto populates from the Web to Lead form when a DC fills out the Contact Us Page on intellibedDC.com</inlineHelpText>
        <label>4 - Try the Bed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <inlineHelpText>Enter known Twitter handle(s), account(s)</inlineHelpText>
        <label>Twitter</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type_of_Mattress_do_you_currently_sleep1__c</fullName>
        <label>Type of Mattress do you currently sleep</label>
        <picklist>
            <picklistValues>
                <fullName>Inner Spring Mattress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory Foam Mattress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Mattress (i.e. Sleep Number)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Lead_for_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Lead for Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VAT_Status__c</fullName>
        <label>VAT Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Watched_all_HCP_Training_Vidoes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated in Salesforce.com automatically when the custom redirect has been clicked on all three training videos for the the HCP program.</description>
        <inlineHelpText>This field is updated in Salesforce.com automatically when the custom redirect has been clicked on all three training videos for the the HCP program.</inlineHelpText>
        <label>Watched all HCP Training Vidoes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <picklist>
            <picklistValues>
                <fullName>Under 110 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110-120 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120-130 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130-140 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140-150 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150-160 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160-170 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170-180 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180-190 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>190-200 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200-225 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225-250 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250-275 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>275-300 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300-350 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350-400 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400-450 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>450-500 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500-600 lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 600 lbs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_I_like_LEAST_about_my_current_bed__c</fullName>
        <label>❸ What I like LEAST about my current bed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_I_like_MOST_about_my_current_bed__c</fullName>
        <label>❹ What I like MOST about my current bed:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_I_need_to_change_or_improve__c</fullName>
        <label>❺ What I need to change or improve:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_additional_info_would_interest_them__c</fullName>
        <label>What additional info would interest them</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_best_describes_your_daily_activity__c</fullName>
        <label>What best describes your daily activity</label>
        <picklist>
            <picklistValues>
                <fullName>Driving for most of the day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing or walking most of the day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sitting on office chair most of the day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other*</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_product_displays_do_you_use__c</fullName>
        <label>What product displays do you use?</label>
        <picklist>
            <picklistValues>
                <fullName>Counter top displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee table style displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor stand racks/shelves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wall mounted displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posters and brochures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In treatment room displays/brochures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We don’t use displays, we are open to it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO NOT send us a display</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>What_products_do_you_display__c</fullName>
        <label>What products do you display?</label>
        <picklist>
            <picklistValues>
                <fullName>intelliBed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>intelliBed Pillows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other brand pillows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vitamins/nutritional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topical Creams ie:  Biofreeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TENS units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Braces, Wraps, or other DME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot/Cold Packs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We DO NOT display any products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (s)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>What_s_most_important_to_you_w_iB__c</fullName>
        <label>What&apos;s most important to you w iB?</label>
        <picklist>
            <picklistValues>
                <fullName>Natural material construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve patient outcomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash profit-center income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_s_prompted_you_to_look_for_new_bed__c</fullName>
        <label>What&apos;s prompted you to look for new bed?</label>
        <picklist>
            <picklistValues>
                <fullName>I am concerned about mattress toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am interested in Gel sleep surfaces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have health condition (back-pain, etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m planning to move</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Our mattress is old and sagging</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>What_type_of_mattress_do_you_prefer__c</fullName>
        <label>What type of mattress do you prefer</label>
        <picklist>
            <picklistValues>
                <fullName>Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft-Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium-Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_was_discussed_How_can_we_help_them__c</fullName>
        <label>What was discussed? How can we help them</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_Pain_Start__c</fullName>
        <label>When Pain Start?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_do_you_plan_on_purchasing_a_new_bed__c</fullName>
        <label>When do you plan on purchasing a new bed</label>
        <picklist>
            <picklistValues>
                <fullName>Today</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within a Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within a Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1 Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Which_stats_do_you_regularly_monitor__c</fullName>
        <label>Which stats do you regularly monitor</label>
        <picklist>
            <picklistValues>
                <fullName>Number of new patient visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly gross collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Units of non–service products sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Case Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Length of Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average charge per visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We MONITOR ALL of these &amp; more</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Why_did_you_choose_an_iBED__c</fullName>
        <label>Why did you choose an iBED</label>
        <picklist>
            <picklistValues>
                <fullName>The Professional Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Condition IB can help with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The natural materials/intelliGel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To test before recommending to patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Why_no_patient_purchases_yet__c</fullName>
        <label>Why no patient purchases yet?</label>
        <picklist>
            <picklistValues>
                <fullName>I have not begun recommending yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m not comfortable recommending yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too expensive for my patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I do not know my promo code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I have not been properly trained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I have not changed my intake forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I do not have display materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m fearful of &quot;selling beds&quot;</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <description>I see the value of fully integrating sleep wellness into my practice and might want to set up a room with an intelliBED sleep surface to show my patients.</description>
        <inlineHelpText>Auto populates from the Web to Lead form when a DC fills out the Contact Us Page on intellibedDC.com</inlineHelpText>
        <label>1 - integrate sleep wellness</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <description>I want to become more knowledgeable about sleep wellness and refer my patients to intelliBED for help in picking a bed.</description>
        <inlineHelpText>Auto populates from the Web to Lead form when a DC fills out the Contact Us Page on intellibedDC.com</inlineHelpText>
        <label>2 - Become More Knowlegable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3__c</fullName>
        <description>3. I want to learn more about the sleep wellness opportunity.</description>
        <inlineHelpText>Auto populates from the Web to Lead form when a DC fills out the Contact Us Page on intellibedDC.com</inlineHelpText>
        <label>3 - Learn More about Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>YouTube__c</fullName>
        <inlineHelpText>Enter known YouTube account(s), pages(s)</inlineHelpText>
        <label>YouTube</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Your_Message__c</fullName>
        <description>Website &quot;Contact Us&quot; form field</description>
        <inlineHelpText>Website &quot;Contact Us&quot; form field</inlineHelpText>
        <label>Your Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iB_better_than_last_bed__c</fullName>
        <label>iB better than last bed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I can&apos;t tell the difference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I have not decided yet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>